--- a/BizPass/Base.lproj/LaunchScreen.storyboard
+++ b/BizPass/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +17,38 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BizPass" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P7Q-yU-3ZE">
+                                <rect key="frame" x="255" y="335" width="94" height="76"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="94" id="yEe-rW-hw1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="largericon.png" translatesAutoresizingMaskIntoConstraints="NO" id="xiE-ox-6Wh">
+                                <rect key="frame" x="180" y="124" width="240" height="240"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="00z-1K-sSd"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="F4p-Jc-oPd"/>
+                                    <constraint firstAttribute="width" secondItem="xiE-ox-6Wh" secondAttribute="height" multiplier="1:1" id="dQm-ez-Vrb"/>
+                                    <constraint firstAttribute="height" constant="240" id="vvV-Jw-wY3"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.75294117650000003" green="0.22352941179999999" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="P7Q-yU-3ZE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="2" id="FzH-yu-9OL"/>
+                            <constraint firstItem="P7Q-yU-3ZE" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="315" id="LZ6-82-VQv"/>
+                            <constraint firstItem="P7Q-yU-3ZE" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="73" id="O99-RA-7i5"/>
+                            <constraint firstItem="xiE-ox-6Wh" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="104" id="SBv-aq-sym"/>
+                            <constraint firstItem="xiE-ox-6Wh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="upo-3e-bB7"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="xiE-ox-6Wh" secondAttribute="bottom" constant="236" id="ypK-a7-Wdl"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +56,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="largericon.png" width="1024" height="1024"/>
+    </resources>
 </document>
